--- a/index.html
+++ b/index.html
@@ -1,6 +1,60 @@
-<html>
-  <body>
-    <h1>
-      Hello World!
+<!doctype html>
+<html lang="en">
+  <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <link href="./custom.css" rel="stylesheet" /> 
+    <script src="./custom.js" rel="text/javascript" ></script> 
+
+  </head>
+  <body onscroll="handleScroll()">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid ">
+        <!-- <a class="navbar-brand" href="#">Navbar</a> -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon "></span>
+        </button>
+        <div class="collapse navbar-collapse p-0 justify-content-center" id="navbarNav">
+          <ul class="navbar-nav  ">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#first">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#second">Features</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#about">Pricing</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <div  class="container-fluid  w-100 h-100 m-0 p-0">
+
+      <div class="row  container-fluid bg-secondary w-100 h-100 p-0 m-0" id="first">
+          <div class="col bg-info">
+
+          </div>
+          <div class="col bg-warning">
+
+          </div>
+      </div>
+
+      <div class="row  container-fluid bg-secondary w-100 h-100 p-0 m-0" id="second">
+        <div class="col bg-warning">
+        </div>
+        <div class="col bg-info">
+        </div>
+      </div>
+
+      <div class="row  container-fluid bg-secondary w-100 h-100 p-0 m-0" id="about">
+        <div class="col bg-danger">
+        </div>
+        <div class="col bg-warning">
+        </div>
+      </div>
+
+    </div>
   </body>
   </html
